# odoo-app

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
odoo_app/: bot.py
odoo_app/scripts/: cli.py
odoo_module/: __manifest__.py
odoo_module/data/: bot.messages.csv
odoo_module/models/: messages.py
odoo_module/security/: ir.model.access.csv
odoo_module/views/: messages_menus.xml  messages_property_views.xml
