[tool.poetry]
name = "odoo-app"
version = "0.1.0"
description = ""
authors = ["Vadim Gusak <gusakvd@gmail.com>"]
readme = "README.md"
packages = [{include = "odoo_app"}]

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.1.0"
python-dotenv = "^0.21.1"
pytelegrambotapi = "^4.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bot = "odoo_app.scripts.cli:main"
